# hat-gui

./: .buildinfo  .gitignore  CNAME  README.rst  gui.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js  server.html  tsconfig.ui.json
.doctrees/: environment.pickle  gui.doctree  index.doctree  server.doctree
.doctrees/adapters/: dummy.doctree  latest.doctree
.doctrees/views/: dummy.doctree  login.doctree
.github/workflows/: docs.yaml  main.yaml
_sources/: gui.rst.txt  index.rst.txt
_sources/adapters/: latest.rst.txt
_sources/views/: login.rst.txt
adapters/: dummy.html  latest.html
docs/: conf.py  gui.rst  index.rst  server.rst
pending/test_sys/: test_gui.py
playground/: build.sh  env.sh  event-server.sh  gui-server.sh  gui.sh  passwd.sh
py_api/: index.html  search.js
py_api/hat/: gui.html
py_api/hat/gui/: __main__.html  adapters.html  common.html  engine.html  main.html  passwd.html  server.html  view.html  vt.html
py_api/hat/gui/adapters/: latest.html
py_api/hat/gui/server/: adapter.html  main.html  runner.html  server.html  user.html  view.html
schemas_json/: events.yaml  juggler.yaml  main.yaml  server.yaml
schemas_json/adapters/: latest.yaml
src_doit/: __init__.py  ui.py  views.py
src_js/: api.d.ts  main.js  main.ts
src_js/common/: form.js
src_js/ui/: main.ts
src_js/views/login/: main.js  main.ts
src_js/views/login/style/: color.css  main.css
src_py/hat/gui/: common.py  engine.py  main.py  passwd.py  server.py  view.py
src_py/hat/gui/adapters/: latest.py
src_py/hat/gui/server/: __main__.py  adapter.py  main.py  runner.py  server.py  user.py  view.py
src_scss/: main.scss
src_scss/views/login/: _color.scss  main.scss
src_static/ui/: index.html
src_static/ui/style/: main.css
src_static/ui/style/fonts/: fontawesome.css  inter.css  robotomono.css
test_pytest/: conftest.py
test_pytest/test_adapters/: test_latest.py
test_pytest/test_server/: test_adapter.py  test_server.py  test_user.py  test_view.py
test_pytest/test_sys/: test_gui.py
test_pytest/test_unit/: test_engine.py  test_server.py  test_view.py
test_pytest/test_unit/test_adapters/: test_latest.py
views/: dummy.html  login.html
