[project]
name = "hat-gui"
version = "0.7.2"
description = "Hat GUI"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.9",
    "hat-event ~=0.9.0",
    "hat-json ~=0.5.27",
    "hat-juggler ~=0.6.18",
    "hat-monitor ~=0.8.5",
    "hat-util ~=0.6.16",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-gui.git"
Documentation = "http://hat-gui.hat-open.com"

[project.scripts]
hat-gui-server = "hat.gui.server.main:main"
hat-gui-passwd = "hat.gui.passwd:main"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.15.14",
    "psutil >=5.9.5",
    "sphinxcontrib-plantuml >=0.24.1",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.15.14"]
build-backend = "hat.doit.pep517"

[tool.hat-doit]
pytest_profile_dir = "build/profile"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
