[project]
name = "hat-gui"
version = "0.7.15"
description = "Hat GUI"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.13",
    "hat-event ~=0.9.41",
    "hat-json ~=0.6.8",
    "hat-juggler ~=0.7.2",
    "hat-monitor ~=0.8.21",
    "hat-util ~=0.6.22",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-gui.git"
Documentation = "http://hat-gui.hat-open.com"

[project.scripts]
hat-gui-server = "hat.gui.server.main:main"
hat-gui-passwd = "hat.gui.passwd:main"

[dependency-groups]
run = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.13",
    "hat-event ~=0.9.41",
    "hat-json ~=0.6.8",
    "hat-juggler ~=0.7.2",
    "hat-monitor ~=0.8.21",
    "hat-util ~=0.6.22",
]
build = [
    "hat-doit ~=0.16.4",
    "hat-json ~=0.6.8",
]
dev = [
    {include-group = "run"},
    {include-group = "build"},
    "psutil >=7.2.2",
    "sphinxcontrib-plantuml >=0.24.1",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.4"]
build-backend = "hat.doit.pep517"

[tool.hat-doit]
pytest_profile_dir = "build/profile"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
